ensure form lokos nice on mobile and desktop.

--- a/css/layout.css
+++ b/css/layout.css
@@ -18,8 +18,32 @@
   width: 100%;
 }
 
+.codeJournal {
+  padding: 1rem 1.5rem;
+}
+
+#title,
+#url,
+#notes {
+  width: 100%;
+  height: 2.5rem;
+  margin-bottom: 1rem;
+  margin-top: 0.5rem;
+}
+
+#notes {
+  height: 8rem;
+}
+
+.placeholder {
+  height: 20rem;
+  width: 100%;
+  margin-bottom: 1rem;
+}
+
 @media screen and (min-width: 768px) {
-  .container {
+  .container,
+  .codeJournal {
     max-width: 900px;
   }
 
@@ -31,4 +55,12 @@
   .column-half {
     width: 50%;
   }
+
+  .codeJournal {
+    padding: 1rem 4.75rem;
+  }
+}
+
+.pageTitle {
+  margin-left: 1.5%;
 }
